--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "khata",
   "version": "0.1.0",
-  "private": true,
+  
   "scripts": {
     "dev": "next dev",
+    "lint": "next lint",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "eslint": "8.47.0",
